--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,7 @@
   <target name="prepare">
     <mkdir dir="${build.dir}"/>
     <mkdir dir="${build.classes.dir}"/>
+    <mkdir dir="${build.classes.dir}/main/java"/>
     <mkdir dir="${build.lib.dir}"/>
   </target>
 
@@ -35,11 +36,11 @@
     <buildnumber/>
   </target>
 
-  <target name="compile"
+  <target name="compile-main"
 	  depends="prepare,bump-build-number"
 	  description="compiles all code">
-    <javac srcdir="${src.dir}"
-	   destdir="${build.classes.dir}"
+    <javac srcdir="${src.dir}/main/java"
+	   destdir="${build.classes.dir}/main/java"
 	   deprecation="true"
 	   debug="true"
 	   debuglevel="source,lines"
@@ -55,10 +56,10 @@
   </target>
 
   <target name="package"
-	  depends="compile"
+	  depends="compile-main"
 	  description="packages all classes into a jar file">
     <jar destfile="${build.lib.dir}/rainbow.jar"
-	 basedir="${build.classes.dir}">
+	 basedir="${build.classes.dir}/main/java">
       <manifest>
 	<attribute name="Built-By" value="${user.name}"/>
 	<attribute name="Implementation-Version"
