--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
     <mkdir dir="${build.dir}"/>
     <mkdir dir="${build.classes.dir}"/>
     <mkdir dir="${build.classes.dir}/main/java"/>
+    <mkdir dir="${build.classes.dir}/test/java"/>
     <mkdir dir="${build.lib.dir}"/>
   </target>
 
@@ -55,6 +56,25 @@
      </javac>
   </target>
 
+  <target name="compile-test"
+	  depends="prepare,bump-build-number,compile-main"
+	  description="compiles all test code">
+    <javac srcdir="${src.dir}/test/java"
+	   destdir="${build.classes.dir}/test/java"
+	   deprecation="true"
+	   debug="true"
+	   debuglevel="source,lines"
+	   source="1.8"
+	   target="1.8"
+	   includeantruntime="false">
+      <compilerarg value="-Xlint"/>
+      <include name="**"/>
+      <classpath>
+	<pathelement location="${build.classes.dir}/main/java"/>
+      </classpath>
+    </javac>
+  </target>
+
   <target name="package"
 	  depends="compile-main"
 	  description="packages all classes into a jar file">
@@ -69,7 +89,7 @@
   </target>
 
   <target name="all"
-	  depends="clean,package"
+	  depends="clean,package,compile-test"
 	  description="cleans, then builds everything"/>
 
 </project>
