--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>niosax</groupId>
-            <artifactId>com.dhl.secops</artifactId>
-            <version>10.7.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/deps/niosax-10.7.2.jar</systemPath>
+            <groupId>damd.niosax</groupId>
+            <artifactId>niosax</artifactId>
+            <version>10.7.3</version>
         </dependency>
     </dependencies>
 </project>
