do not allow DomReader.(try)MoveToParent to go beyond the root element of the reader

--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,12 @@
             <artifactId>niosax</artifactId>
             <version>10.7.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
