--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>damd.rainbow</groupId>
+    <groupId>com.github.dmad.rainbow</groupId>
     <artifactId>rainbow</artifactId>
     <version>0.0.0</version>
     <packaging>jar</packaging>
@@ -65,9 +65,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>damd.niosax</groupId>
+            <groupId>com.github.dmad.niosax</groupId>
             <artifactId>niosax</artifactId>
-            <version>10.7.3</version>
+            <version>10.7.5</version>
         </dependency>
 
         <dependency>
